# infra-test

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile-legacy  Dockerfile-legacy-summit  README.md  justfile
.github/workflows/: ci.yaml  pages.yaml
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs  main.rs
crates/avalanche/: Cargo.toml  config.local.toml
crates/avalanche/src/: api.rs  build.rs  main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/proto/: collectable.proto
crates/proto/proto/service/: auth.proto  vessel.proto
crates/proto/src/: lib.rs
crates/service/: Cargo.toml  build.rs
crates/service-core/: Cargo.toml
crates/service-core/src/: api.rs  auth.rs  collectable.rs  lib.rs  remote.rs  role.rs
crates/service-core/src/api/: operation.rs  v1.rs
crates/service-core/src/api/v1/: avalanche.rs  services.rs  summit.rs  vessel.rs
crates/service-core/src/endpoint/: enrollment.rs
crates/service-types/: Cargo.toml
crates/service-types/src/: collectable.rs  lib.rs
crates/service-types/src/api/: v1.rs
crates/service-types/src/api/v1/: avalanche.rs  services.rs  summit.rs  vessel.rs
crates/service-types/src/endpoint/: enrollment.rs
crates/service/migrations/: 20240104222232_init.sql
crates/service/proto/: account.proto  auth.proto  avalanche.proto  collectable.proto  endpoint.proto  vessel.proto
crates/service/src/: account.rs  api.rs  client.rs  config.rs  crypto.rs  database.rs  endpoint.rs  error.rs  git.rs  lib.rs  logging.rs  middleware.rs  process.rs  request.rs  role.rs  server.rs  signal.rs  state.rs  sync.rs  task.rs  token.rs  tracing.rs
crates/service/src/account/: service.rs
crates/service/src/api/: handler.rs  v1.rs
crates/service/src/api/v1/: services.rs
crates/service/src/database/migrations/: 20240104222232_init.sql
crates/service/src/endpoint/: enrollment.rs  service.rs
crates/service/src/middleware/: auth.rs  authentication.rs  extensions.rs  extract_token.rs  log.rs
crates/summit/: Cargo.toml  config.local.toml
crates/summit/frontend/: .prettierrc  package.json  pnpm-lock.yaml  vite.config.ts
crates/summit/frontend/src/lib/: api.ts  index.ts  state.svelte.ts  storage.ts
crates/summit/frontend/src/lib/component/: Endpoint.svelte
crates/summit/frontend/src/routes/: +layout.svelte  +page.svelte
crates/summit/migrations/: 20250403180711_init.sql
crates/summit/public/: 404.html  index.html
crates/summit/src/: api.rs  main.rs  manager.rs  profile.rs  project.rs  queue.rs  repository.rs  routes.rs  seed.rs  task.rs  web.rs  worker.rs
crates/summit/src/api/: account.rs
crates/summit/src/profile/: refresh.rs  remote.rs
crates/summit/src/repository/: create.rs  refresh.rs  reindex.rs
crates/summit/src/task/: build.rs  create.rs  list.rs  query.rs
crates/summit/src/web/: api.rs
crates/summit/src/web/api/: endpoints.rs
crates/summit/templates/: 404.html  index.html
crates/vessel/: Cargo.toml
crates/vessel/src/: api.rs  collection.rs  collection_db.rs  main.rs  worker.rs
crates/vessel/src/collection_db/migrations/: 20241118162144_init.sql
test/: Caddyfile  admin.pem  docker-compose.yaml
test/avalanche/: .privkey  config.toml
test/avalanche-legacy/: .privkey  .pubkey  .seed
test/import/: nano-8.2-29-1-x86_64.stone  stone.index
test/legacy/: Caddyfile  Dockerfile  bootstrap.sh
test/legacy/avalanche/: .seed
test/legacy/summit/: .seed  seed.json
test/legacy/vessel/: .seed
test/recipes/screen/: manifest.x86_64.jsonc  stone.yaml
test/summit/: .privkey  config.toml  seed.toml
test/summit-legacy/: seed.json
test/summit-legacy/state/: .privkey  .pubkey  .seed
test/vessel/: .privkey  config.toml
test/vessel-legacy/state/: .privkey  .pubkey  .seed
