[workspace]
resolver = "2"
members = [
  "crates/*"
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
axum = "0.7.5"
base64 = "0.21"
bitflags = "2.5.0"
chrono = "0.4.38"
color-eyre = "0.6.3"
derive_more = "0.99.17"
futures = "0.3.30"
http = "1.0.0"
http-serde = "1.1.3"
itertools = "0.12.1"
prost = "0.12.4"
rand = "0.8.5"
serde_json = "1.0"
thiserror = "1.0.59"
tokio-stream = "0.1.15"
toml = "0.8.12"
tonic = "0.10.2"
tracing = "0.1.40"

clap = { version = "4.5", features = ["derive"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "pkcs8", "pem"] }
jsonwebtoken = { version = "9.3.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["sqlite", "chrono", "uuid", "runtime-tokio"] }
strum = { version = "0.25", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tonic-build = { version = "0.10.2", features = ["prost"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = ["fs"] }
tracing-futures = { version = "0.2.5", features = ["futures-03"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
uuid = { version = "1.8.0", features = ["v4"] }
