[workspace]
resolver = "2"
members = [
  "crates/*"
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
dag = { git = "https://github.com/serpent-os/tools.git" }
moss = { git = "https://github.com/serpent-os/tools.git" }
stone = { git = "https://github.com/serpent-os/tools.git" }
stone_recipe = { git = "https://github.com/serpent-os/tools.git" }

axum = "0.8.0"
base64 = "0.22.1"
bitflags = "2.4.1"
bytes = "1.5"
chrono = "0.4.30"
color-eyre = "0.6.2"
derive_more = { version = "1.0.0", features = ["display", "from", "into"] }
flate2 = "1.0"
futures-util = { version = "0.3.30", default-features = false }
hex = "0.4.3"
http = "1.0"
http-serde = "2.0"
itertools = "0.13.0"
prost = "0.13.3"
rand = "0.8.5"
serde_json = "1.0"
sha2 = "0.10.8"
thiserror = "2.0.3"
tokio-stream = "0.1.14"
tokio-util = "0.7"
toml = "0.8.8"
tracing = "0.1.40"
url = "2.5.2"

clap = { version = "4.4", features = ["derive"] }
ed25519-dalek = { version = "2.1.0", features = ["rand_core", "pkcs8", "pem"] }
jsonwebtoken = { version = "9.2.0", default-features = false }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "=0.8.2", features = ["sqlite", "chrono", "uuid", "runtime-tokio"] }
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.2", features = ["fs"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
uuid = { version = "1.6.1", features = ["v4"] }
