[package]
name = "avalanche"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
service = { path = "../service" }

clap.workspace = true
color-eyre.workspace = true
futures.workspace = true
log.workspace = true
serde.workspace = true
tonic.workspace = true
tokio.workspace = true
