[package]
name = "avalanche"
version = "0.1.0"
edition.workspace = true

[dependencies]
service = { path = "../service" }

clap.workspace = true
color-eyre.workspace = true
flate2.workspace = true
futures.workspace = true
hex.workspace = true
http.workspace = true
itertools.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
