[package]
name = "service"
version = "0.1.0"
edition.workspace = true

[dependencies]
base64.workspace = true
bitflags.workspace = true
chrono.workspace = true
clap.workspace = true
derive_more.workspace = true
ed25519-dalek.workspace = true
futures.workspace = true
http.workspace = true
http-serde.workspace = true
itertools.workspace = true
jsonwebtoken.workspace = true
prost.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
toml.workspace = true
tonic.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-futures.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[build-dependencies]
tonic-build.workspace = true
