[package]
name = "service"
version = "0.1.0"
edition.workspace = true

[dependencies]
service-core = { path = "../service-core" }

axum.workspace = true
base64.workspace = true
chrono.workspace = true
derive_more.workspace = true
ed25519-dalek.workspace = true
futures-util.workspace = true
hex.workspace = true
http.workspace = true
http-serde.workspace = true
itertools.workspace = true
jsonwebtoken.workspace = true
moss.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
