[package]
name = "summit"
version = "0.1.0"
edition.workspace = true

[dependencies]
service = { path = "../service" }

axum.workspace = true
clap.workspace = true
color-eyre.workspace = true
futures.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
tonic.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
