[package]
name = "summit"
version = "0.1.0"
edition.workspace = true

[dependencies]
service = { path = "../service" }

axum.workspace = true
chrono.workspace = true
clap.workspace = true
color-eyre.workspace = true
dag.workspace = true
derive_more.workspace = true
futures-util.workspace = true
hex.workspace = true
http.workspace = true
http-serde.workspace = true
itertools.workspace = true
moss.workspace = true
serde.workspace = true
sha2.workspace = true
snafu.workspace = true
sqlx.workspace = true
stone.workspace = true
stone_recipe.workspace = true
strum.workspace = true
toml.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true
