[package]
name = "vessel"
version = "0.1.0"
edition.workspace = true

[dependencies]
service = { path = "../service" }

clap.workspace = true
color-eyre.workspace = true
futures-util.workspace = true
hex.workspace = true
http.workspace = true
moss.workspace = true
sha2.workspace = true
sqlx.workspace = true
stone.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
